feat: auth Google + profil RTDB + recherche ville (autocomplete)

--- a/firebase.json
+++ b/firebase.json
@@ -1,16 +1,10 @@
 {
   "hosting": {
-    "public": "dist",
+    "public": "y",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
     ]
   },
   "functions": [
@@ -28,9 +22,15 @@
       ]
     }
   ],
+  "database": {
+    "rules": "database.rules.json"
+  },
   "emulators": {
     "auth": {
       "port": 9099
+    },
+    "database": {
+      "port": 9000
     },
     "functions": {
       "port": 5001
