--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,12 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
 VITE_FIREBASE_APP_ID=1:123456789:web:abcdef
 VITE_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
 
+# Optionnel (Realtime Database) — utile pour la géolocalisation/présence
+VITE_FIREBASE_DATABASE_URL=https://votre-projet-id-default-rtdb.europe-west1.firebasedatabase.app
+
+# Région Firebase Functions (recommandé si vos functions sont en europe-west1)
+VITE_FUNCTIONS_REGION=europe-west1
+
 # ============ STRIPE (Frontend) ============
 # Clé publique Stripe (safe pour le frontend)
 # Obtenir depuis: https://dashboard.stripe.com/test/apikeys
