feat(mvp): navigation explore + panier persistant (RTDB+storage)

--- a/functions/.gitignore
+++ b/functions/.gitignore
@@ -1,1 +1,12 @@
 node_modules/
+
+# Secrets (NEVER COMMIT)
+.env
+.env.*
+!.env.example
+
+# Build output (selon config)
+lib/
+dist/
+.eslintcache
+.cache/
