--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@
 .env.*
 !.env.example
 
+# Functions env (NEVER COMMIT)
+functions/.env
+functions/.env.*
+!functions/.env.example
+functions/.env.example.local
+
 # ============ Logs ============
 logs
 *.log
@@ -19,12 +25,21 @@ lerna-debug.log*
 # ============ Dépendances ============
 node_modules
 
+# Dépendances Functions
+functions/node_modules/
+
 # ============ Build & Cache ============
 dist
 dist-ssr
 *.local
 .cache/
 *.tsbuildinfo
+
+# Build output Functions (selon config)
+functions/lib/
+functions/dist/
+functions/.eslintcache
+functions/.cache/
 
 # ============ Firebase ============
 .firebase/
