feat: Menu pizzaiolo avec gestion tailles Classic/Large + sync Firebase
- MenuItemCard gère double pricing pour pizzas (Classic/Large)
- useMenu connecté à Firebase real-time (public/trucks/menu/items)
- useTrucks connecté à Firebase (public/trucks)
- Sélecteur de taille interactif pour pizzas
- Menu créé par pizzaiolo visible sur page camion

--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.7.0",
+    "leaflet": "^1.9.4",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.11.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
