--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-leaflet": "^5.0.0",
+    "react-qr-code": "^2.0.18",
     "react-router-dom": "^7.11.0",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
