refactor: pizzaiolo menu + truck slug hardening
- Harden TruckDetails fetch (slug/RTDB key) + better error UI\n- Refactor pizzaiolo menu editor into hooks/components\n- Update docs (README/SETUP/.env.example) and smoke tests

--- a/.env.example
+++ b/.env.example
@@ -13,11 +13,17 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
 VITE_FIREBASE_APP_ID=1:123456789:web:abcdef
 VITE_FIREBASE_MEASUREMENT_ID=G-XXXXXXXXXX
 
-# Optionnel (Realtime Database) — utile pour la géolocalisation/présence
+# Realtime Database (RTDB)
 VITE_FIREBASE_DATABASE_URL=https://votre-projet-id-default-rtdb.europe-west1.firebasedatabase.app
 
-# Région Firebase Functions (recommandé si vos functions sont en europe-west1)
-VITE_FUNCTIONS_REGION=europe-west1
+# Région Firebase Functions (utilisée par le SDK client). Par défaut dans ce dépôt : us-central1
+# Si vous changez la région dans les Functions, mettez la même valeur ici.
+VITE_FUNCTIONS_REGION=us-central1
+
+# Base URL HTTP des endpoints Functions (Stripe, etc.)
+# Par défaut, le front utilise : https://us-central1-<PROJECT_ID>.cloudfunctions.net
+# Définir cette variable si vos Functions ne sont pas en us-central1.
+VITE_FUNCTIONS_ORIGIN=
 
 # ============ STRIPE (Frontend) ============
 # Clé publique Stripe (safe pour le frontend)
@@ -28,5 +34,6 @@ VITE_STRIPE_PUBLISHABLE_KEY=pk_test_...
 # - NE JAMAIS commiter le fichier .env.local
 # - Les variables VITE_* sont exposées côté client
 # - La clé secrète Stripe DOIT rester côté backend (Firebase Functions)
-# - Pour configurer Stripe secret key côté functions:
-#   firebase functions:config:set stripe.secret_key="YOUR_STRIPE_SECRET_KEY"
+# - Pour configurer Stripe côté Functions (Secrets Manager) :
+#   firebase functions:secrets:set STRIPE_SECRET_KEY
+#   firebase functions:secrets:set STRIPE_WEBHOOK_SECRET
