feat(orders): refonte commandes pro + v2 + fixes checkout/RTDB

--- a/firebase.json
+++ b/firebase.json
@@ -51,8 +51,8 @@
       "port": 5000
     },
     "ui": {
-      "enabled": true,
-      "port": 4000
+      "enabled": false,
+      "port": 4400
     },
     "singleProjectMode": true
   }
