--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,8 @@ Thumbs.db
 # ============ Testing ============
 coverage/
 .nyc_output/
+playwright-report/
+test-results/
 
 # ============ Misc ============
 *.pem
